# LoggerFactoryPattern

./: .ignore  CMakeLists.txt  README.md  main.cpp
cpp/: DatabaseLoggerAndDatabaseLoggerFactory.cpp  FileLoggerAndFileLoggerFactory.cpp  LoggerAndLoggerFactory.cpp  Time.cpp
header/: DatabaseLoggerAndDatabaseLoggerFactory.h  FileLoggerAndFileLoggerFactory.h  Logger&LoggerFactory.h~  LoggerAndLoggerFactory.h  Time.h
